--- a/css/style.css
+++ b/css/style.css
@@ -748,9 +748,6 @@ body{
 .iti__country-container {
   bottom: 25px !important;
 }
-.iti--inline-dropdown .iti__dropdown-content {
-  margin-left: -14px !important;
-}
 .iti__dropdown-content {
   background-color: #242731 !important;
 }
@@ -1033,11 +1030,14 @@ body{
 	}
 
 	/* COUNTRY CODE PLUGIN CSS */
+	.iti__selected-country-primary {
+	  padding-left: 26px !important;
+	}
 
 	#phone{
 		width: 286px !important;
 		height: 46px !important;
-		padding-left: 57px !important;
+		padding-left: 65px !important;
 	}
 
 	.iti__af {
